--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -1,5 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-one:
-  id: 1
-two:
-  id: 2
+# one:
+#   firstname: John
+#   famname: Doe
+#   login: jdoe
+#   passwd: jd0e
+#   person_type_id: 1
